	- start menu pixmap now named: taskbar/start.xpm
	- fix zOrder in ShowDesktop action
	- fix occasional keyboard navigation malfunction in the start menu
	- try to mouse focus only when mouse actually moves to another window
	- prevent focusing taskbar with mouse focus
	- use locale strings in 'icewm-menu-gnome2'
	- also search for .png icons when only basename is specified
	  (Manuel Carrasco)

1.2.27: 2006-08-06
	- Danish translation (by Ole Carlsen)
	- added 'Look=flat' (oscarello)
	- added TaskbarButtonWidthDivisor (lysanderslair)
	- minor workspace switching optimization -
	  Ramunas Lukosevicius <lukoramu@parok.lt>
	- new FSF address added in COPYING

1.2.26: 2006-04-16
	- fix icesh workspace switching (Thomas Holder)
	- Polish translation fix (Pawel Chwalowski)
	- fix focus after closing fullscreen window
	- new option: TaskBarShowTransientWindows (default = 1, for now)

1.2.25: 2006-02-03
	- fix resize of maximized windows when taskbar set to AutoHide
	- fix support for screens 0.1 and up

1.2.25pre1: 2006-01-31
	- fix format in window size/position display (Bert Wesarg)
	- fix configure to use pkg-config for xft (Marius Feraru)
	- fix build with Sun Forte C++ (Grant McDorman)
	- icewmtray crash fixes (Grant McDorman)

1.2.24: 2006-01-22
	- option to --replace an extisting window manager
        - change menu scroll wheel direction (Thomas Holder)
        - paint desktop tray background (Thomas Holder)
        - gcc 4.1 build fixes (Hanno Boeck)
	- fix gcc strict aliasing errors (Pavel Nemec)
        
1.2.24pre1: 2005-12-04
	- restore Dutch translation from Ton Kersten
	- zh_TW translation from Wei-Lun Chao
	- fix TaskBarKeepBelow=1 preference
	- fix problems in horizontal maximization
	- implemented support for --replace option
	- Make shaped decorations work in 21 bit graphics cards 
          (like those common in sparcs) -- Bernhard R. Link

1.2.23: 2005-08-14
	- make taskbar pop out even when collaped
	- Slovak translation update (Zdenko Podobny)
